--- a/style.css
+++ b/style.css
@@ -29,6 +29,9 @@ body, html {
     position: absolute;
     left: 50%;
     top: 50%;
+    max-width: 100vw;
+    overflow: hidden;
+    max-height: calc(100vh - 40px);
     transform: translate(-50%, calc(-50% - 40px));
 }
 
@@ -120,35 +123,9 @@ p {
     animation: show 500ms forwards;
 }
 
-.headerani {
-    text-align: center;
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    animation: headershow 2s forwards;
-    width: 100%;
-}
-
-.textani {
-    text-align: center;
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    animation: textshow 3s forwards;
-    width: 100%;
-}
-
 .actiontray {
     position: relative;
     width: 65px;
-}
-
-.actioncon {
-    display: flex;
-    flex-direction: row;
-    gap: 10px;
-    position: absolute;
-    animation: actionshow 4s forwards;
 }
 
 .action {
@@ -156,51 +133,41 @@ p {
     font-size: 30px;
 }
 
-@keyframes actionshow {
-    0% {
-        top: 72px;
-        opacity: 0;
-    }
-    50% {
-        top: 72px;
-    }
-    75% {
-        opacity: 0;
-    }
-    100% {
-        top: 30px;
-        opacity: 1;
-    }
+.actions {
+    top: 10px;
+    display: flex;
+    gap: 5px;
+    animation-delay: 2s !important;
+    animation: appear 2s forwards;
+    opacity: 0;
+    position: absolute;
 }
 
-@keyframes textshow {
+@keyframes appear {
     0% {
-        top: 32px;
+        transform: translateY(42px);
         opacity: 0;
-    }
-    25% {
-        top: 32px;
     }
     50% {
         opacity: 0;
     }
     100% {
-        top: -10px;
+        transform: translateY(0px);
         opacity: 1;
     }
 }
 
-@keyframes headershow {
+@keyframes disappear {
     0% {
-        top: -12px;
-        opacity: 0;
+        transform: translateY(0px);
+        opacity: 1;
     }
-    25% {
+    50% {
         opacity: 0;
     }
     100% {
-        top: -50px;
-        opacity: 1;
+        transform: translateY(-100px);
+        opacity: 0;
     }
 }
 
@@ -264,6 +231,11 @@ span {
     width: 100%;
 }
 
+.hue {
+    border-radius: 100%;
+    margin: 5px;
+}
+
 @keyframes wrong {
     25% {
         padding-left: 10%;
@@ -293,6 +265,7 @@ span {
     width: 100%;
     height: 100%;
     background-color: rgb(58, 153, 49);
+
 }
 
 .showwinner {
