--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
 body, html {
     height: 100%;
     width: 100%;
+    max-width: 100vw;
+    overflow: hidden;
     margin: 0px;
     background-color: rgb(20, 20, 20);
     color: rgb(223, 223, 223);
@@ -30,7 +32,6 @@ body, html {
     left: 50%;
     top: 50%;
     max-width: 100vw;
-    overflow: hidden;
     max-height: calc(100vh - 40px);
     transform: translate(-50%, calc(-50% - 40px));
 }
@@ -44,7 +45,6 @@ body, html {
     position: absolute;
     left: 50%;
     transform: translatex(-50%);
-    overflow: hidden;
     height: 100vh;
     width: 100vw;
 }
@@ -137,10 +137,10 @@ p {
     top: 10px;
     display: flex;
     gap: 5px;
-    animation-delay: 2s !important;
+    animation-delay: 1s !important;
     animation: appear 2s forwards;
     opacity: 0;
-    position: absolute;
+    position: relative;
 }
 
 @keyframes appear {
@@ -232,8 +232,29 @@ span {
 }
 
 .hue {
+    transition: 500ms;
+    position: relative;
     border-radius: 100%;
     margin: 5px;
+}
+
+.hueshake {
+    animation: wrongHue 300ms !important;
+}
+
+@keyframes wrongHue {
+    25% {
+        transform: translateX(0%);
+    }
+    50% {
+        transform: translateX(-10%);
+    }
+    75% {
+        transform: translateX(10%);
+    }
+    100% {
+        transform: translateX(0%);
+    }
 }
 
 @keyframes wrong {
